--- a/src/app/all-games/all-games.page.html
+++ b/src/app/all-games/all-games.page.html
@@ -5,10 +5,11 @@
 </ion-header>
 
 <ion-content>
+  <ion-button (click)='fetchGames()'></ion-button>
   <ion-list>
     <ion-item *ngFor="let game of games" (click)="joinGame(game)">
       <ion-label>{{game.title}}</ion-label>
-      {{game.currentPlayers.length}}/{{game.maxPlayers}}
+      {{game.maxPlayers}}
       <ion-icon name="lock" *ngIf="game.passwordRequired"></ion-icon>
     </ion-item>
   </ion-list>
