--- a/src/app/all-games/all-games.page.html
+++ b/src/app/all-games/all-games.page.html
@@ -5,12 +5,19 @@
 </ion-header>
 
 <ion-content>
-  <ion-button (click)='fetchGames()'></ion-button>
-  <ion-list>
-    <ion-item *ngFor="let game of games" (click)="joinGame(game)">
-      <ion-label>{{game.title}}</ion-label>
+  <ion-button (click)='fetchGames()'>Refresh games</ion-button>
+  <ion-button (click)='login()'>Set Username</ion-button>
+  <ul class="games-list">
+    <li class="game-item" *ngFor="let game of games">
+      <!-- <img class="lock-icon" src="../assets/lock-icon.svg"/> -->
+      <span class="lock-icon open">
+        <ion-icon name="lock"></ion-icon>
+      </span>
+      {{game.title}}
       {{game.maxPlayers}}
-      <ion-icon name="lock" *ngIf="game.passwordRequired"></ion-icon>
-    </ion-item>
-  </ion-list>
+      <button class="join-btn" (click)="joinGame(game)">
+        <ion-icon name="arrow-round-forward" *ngIf="!game.joinable"></ion-icon>
+      </button>
+    </li>
+  </ul>
 </ion-content>
