--- a/src/app/all-games/all-games.page.html
+++ b/src/app/all-games/all-games.page.html
@@ -1,23 +1,32 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>All Games</ion-title>
+    <ion-title>ALL GAMES</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
   <ion-button (click)='fetchGames()'>Refresh games</ion-button>
   <ion-button (click)='login()'>Set Username</ion-button>
+  <input type="text" class="nice-input" placeholder="Gametitle"/>
   <ul class="games-list">
     <li class="game-item" *ngFor="let game of games">
       <!-- <img class="lock-icon" src="../assets/lock-icon.svg"/> -->
-      <span class="lock-icon open">
+      <span class="lock-icon open" *ngIf="!game.passwordRequired">
+        <ion-icon name="unlock"></ion-icon>
+      </span>
+      <span class="lock-icon locked" *ngIf="game.passwordRequired">
         <ion-icon name="lock"></ion-icon>
       </span>
       {{game.title}}
       {{game.maxPlayers}}
-      <button class="join-btn" (click)="joinGame(game)">
-        <ion-icon name="arrow-round-forward" *ngIf="!game.joinable"></ion-icon>
-      </button>
+      <div class="item-end">
+        <div class="current-players-icon">1/4</div>
+        <button class="join-btn btn" (click)="joinGame(game)" *ngIf="game.joinable">
+          <ion-icon name="arrow-round-forward"></ion-icon>
+        </button>
+        <button class="cancel-btn btn" (click)="joinGame(game)" *ngIf="!game.joinable">
+          <ion-icon name="arrow-round-forward"></ion-icon>
+        </button>
+      </div>
     </li>
   </ul>
 </ion-content>
