--- a/src/app/create-game/create-game.page.scss
+++ b/src/app/create-game/create-game.page.scss
@@ -9,15 +9,62 @@ input {
 
 .deck-selector {
     margin-top: 10px;
+    display: flex;
+    flex-direction: row;
     width: 100%;
-    height: 300px;
+    height: 400px;
     box-shadow: 1px 2px 10px #c0c0c0;
     .search-container {
         border-right: 1px solid black;
         height: 100%;
         width: 50%;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        .top-elements {
+            width: 100%;
+            display: flex;
+        }
+        .body-elements {
+            display: flex;
+            flex-direction: column;
+            overflow-y: auto;
+            h6 {
+                font-weight: 700;
+                font-size: 10pt;
+                margin: 0;
+                padding: 0;
+                padding-top: 10px;
+                align-self: flex-end;
+            }
+            ul {
+                list-style-type: none;
+                padding: 0;
+                li {
+                    padding: 20px;
+                    text-align: center;
+                    color: white;
+                    margin: 2px;
+                    border-radius: 5px;
+                    display: flex;
+                    flex-direction: row;
+                    flex-basis: 100%;
+                    h1 {
+                        align-self: flex-start;
+                    }
+                    .add-to-game {
+                        width: 32px;
+                        height: 32px;
+                        display: flex;
+                    }
+                }
+            }
+        }
+        .addable {
+            background-color: #27ae60;
+        }
+        .not-addable {
+            background-color: #95a5a6;
+        }
         .search-field {
             #deck-query {
                 box-shadow: none;
@@ -34,6 +81,39 @@ input {
             border-radius: 10px;
         }
     }
+    .decks-wrapper {
+        display: flex;
+        width: 50%;
+        flex-direction: column;
+        h2 {
+            height: 30%;
+        }
+        .decks-container {
+            text-align: center;
+            overflow-y: auto;
+            display: flex;
+            flex-wrap: wrap;
+            flex-shrink: 0;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 70%;
+            .deck-btn {
+                width: 128px;
+                text-align: center;
+                height: 128px;
+                background-color: #1c8ca8;
+                color: white;
+                margin: 5px;
+                .remove-from-game {
+                    width: 32px;
+                    height: 32px;                        
+                }
+            }
+        }
+    }
+   
 }
 
 .okay-btn {
