Finished feature/v0.0.4 with printing of response

--- a/src/app/all-games/all-games.page.html
+++ b/src/app/all-games/all-games.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>ALL GAMES</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="createGame()">
+      <ion-button (click)="createGame()" *ngIf="globalService.loggedIn">
         CREATE GAME
         <ion-icon name="create" autoHide="false"></ion-icon>
       </ion-button>
