Added google signin

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,7 +8,5 @@
   <ion-button block (click)="loginWithGoogleNative()" *ngIf="!isDesktop">
     Sign in with google
   </ion-button>
-  <ion-button block (click)="loginWithGoogleDesktop()" *ngIf="isDesktop">
-    Sign in with google
-  </ion-button>
+  <div id="my-signin2" *ngIf="isDesktop"></div>
 </ion-content>
